create mobile, desktop view

--- a/index.html
+++ b/index.html
@@ -8,87 +8,136 @@
 </head>
 <body>
     <header>
-        <img src="" alt="Logo Wedding Link">
+        <img src="./assets/img/WeddingLink-logo.webp" alt="Logo Wedding Link">
     </header>
     <main class="main">
         <section class="hero">
-            <p class="main-text">
-                Crea increibles invitaciones digitales para tu dia especial. 
-            </p>
-            <p class="small-text">
-                Simplifica la planeacion de tu boda con nuestra plataforma de invitaciones digitales facil de usar. 
-                Los invitados pueden facilmente confirmar su asistencia.
-            </p>
-            <form action="">
-                <input type="email" name="" id="" placeholder="Enter your email...">
-                <button type="submit">Contactenme</button>
-            </form>
-            <article>
-                <div class="top-comment">
-                    <div class="stars">
-                        ⭐️⭐️⭐️⭐️⭐️
+            <div class="hero-wrapper">
+                <p class="main-text title">
+                    Creamos increibles invitaciones digitales para tu dia especial. 
+                </p>
+                <p class="small-text">
+                    Simplifica la planeacion de tu boda con nuestra plataforma de invitaciones digitales facil de usar.
+                </p>
+                <p class="small-text">Los invitados pueden facilmente confirmar su asistencia.</p>
+                <form class="form" action="">
+                    <input type="text" name="name" id="name" placeholder="Ingresa tu nombre..." required>
+                    <input type="email" name="email" id="email" placeholder="Ingresa tu correo..." required>
+                    <input type="tel" name="phone" id="phone" placeholder="Ingresa tu telefono..." required>
+                    <button type="submit">Contactenme</button>
+                </form>
+                <article>
+                    <div class="top-comment">
+                        <div class="stars comment">
+                            <div class="star-wrapper star1">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" viewBox="0 0 24 24"><g fill="#EAB308">
+                                    <path d="M10.08 7.897C11.157 5.966 11.695 5 12.5 5c.805 0 1.343.966 2.42 2.897l.278.5c.306.549.46.823.698 1.004c.238.181.535.248 1.13.383l.54.122c2.091.473 3.137.71 3.385 1.51c.249.8-.464 1.633-1.89 3.3l-.368.43c-.405.474-.607.711-.699 1.004c-.09.293-.06.609.001 1.24l.056.576c.216 2.224.323 3.336-.328 3.83c-.651.495-1.63.044-3.587-.857l-.507-.234c-.556-.256-.834-.384-1.129-.384c-.295 0-.573.128-1.13.384l-.506.234c-1.957.9-2.936 1.352-3.587.857c-.651-.494-.543-1.606-.328-3.83l.056-.575c.061-.632.092-.948 0-1.24c-.09-.294-.293-.53-.698-1.004l-.369-.432c-1.425-1.666-2.138-2.5-1.89-3.3c.25-.8 1.295-1.036 3.386-1.509l.54-.122c.595-.135.892-.202 1.13-.383c.239-.18.392-.455.698-1.004l.278-.5ZM4.868 2.5c.03-.105.217-.106.248 0c.14.482.4 1.194.793 1.585c.393.39 1.108.646 1.59.783c.107.03.107.217.002.248c-.482.14-1.195.4-1.586.793c-.39.393-.645 1.108-.782 1.59c-.03.107-.218.107-.249.002c-.14-.482-.4-1.195-.793-1.586c-.393-.39-1.107-.645-1.59-.782c-.106-.03-.107-.218-.001-.249c.482-.14 1.194-.4 1.585-.793c.39-.393.646-1.107.783-1.59Z"/><path fill-rule="evenodd" d="M19 3.25a.75.75 0 0 1 .75.75v.25H20a.75.75 0 0 1 0 1.5h-.25V6a.75.75 0 0 1-1.5 0v-.25H18a.75.75 0 0 1 0-1.5h.25V4a.75.75 0 0 1 .75-.75Z" clip-rule="evenodd"/></g>
+                                </svg>
+                            </div>
+                            <div class="star-wrapper star2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" viewBox="0 0 24 24"><g fill="#EAB308">
+                                    <path d="M10.08 7.897C11.157 5.966 11.695 5 12.5 5c.805 0 1.343.966 2.42 2.897l.278.5c.306.549.46.823.698 1.004c.238.181.535.248 1.13.383l.54.122c2.091.473 3.137.71 3.385 1.51c.249.8-.464 1.633-1.89 3.3l-.368.43c-.405.474-.607.711-.699 1.004c-.09.293-.06.609.001 1.24l.056.576c.216 2.224.323 3.336-.328 3.83c-.651.495-1.63.044-3.587-.857l-.507-.234c-.556-.256-.834-.384-1.129-.384c-.295 0-.573.128-1.13.384l-.506.234c-1.957.9-2.936 1.352-3.587.857c-.651-.494-.543-1.606-.328-3.83l.056-.575c.061-.632.092-.948 0-1.24c-.09-.294-.293-.53-.698-1.004l-.369-.432c-1.425-1.666-2.138-2.5-1.89-3.3c.25-.8 1.295-1.036 3.386-1.509l.54-.122c.595-.135.892-.202 1.13-.383c.239-.18.392-.455.698-1.004l.278-.5ZM4.868 2.5c.03-.105.217-.106.248 0c.14.482.4 1.194.793 1.585c.393.39 1.108.646 1.59.783c.107.03.107.217.002.248c-.482.14-1.195.4-1.586.793c-.39.393-.645 1.108-.782 1.59c-.03.107-.218.107-.249.002c-.14-.482-.4-1.195-.793-1.586c-.393-.39-1.107-.645-1.59-.782c-.106-.03-.107-.218-.001-.249c.482-.14 1.194-.4 1.585-.793c.39-.393.646-1.107.783-1.59Z"/><path fill-rule="evenodd" d="M19 3.25a.75.75 0 0 1 .75.75v.25H20a.75.75 0 0 1 0 1.5h-.25V6a.75.75 0 0 1-1.5 0v-.25H18a.75.75 0 0 1 0-1.5h.25V4a.75.75 0 0 1 .75-.75Z" clip-rule="evenodd"/></g>
+                                </svg>
+                            </div>
+                            <div class="star-wrapper star3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" viewBox="0 0 24 24"><g fill="#EAB308">
+                                    <path d="M10.08 7.897C11.157 5.966 11.695 5 12.5 5c.805 0 1.343.966 2.42 2.897l.278.5c.306.549.46.823.698 1.004c.238.181.535.248 1.13.383l.54.122c2.091.473 3.137.71 3.385 1.51c.249.8-.464 1.633-1.89 3.3l-.368.43c-.405.474-.607.711-.699 1.004c-.09.293-.06.609.001 1.24l.056.576c.216 2.224.323 3.336-.328 3.83c-.651.495-1.63.044-3.587-.857l-.507-.234c-.556-.256-.834-.384-1.129-.384c-.295 0-.573.128-1.13.384l-.506.234c-1.957.9-2.936 1.352-3.587.857c-.651-.494-.543-1.606-.328-3.83l.056-.575c.061-.632.092-.948 0-1.24c-.09-.294-.293-.53-.698-1.004l-.369-.432c-1.425-1.666-2.138-2.5-1.89-3.3c.25-.8 1.295-1.036 3.386-1.509l.54-.122c.595-.135.892-.202 1.13-.383c.239-.18.392-.455.698-1.004l.278-.5ZM4.868 2.5c.03-.105.217-.106.248 0c.14.482.4 1.194.793 1.585c.393.39 1.108.646 1.59.783c.107.03.107.217.002.248c-.482.14-1.195.4-1.586.793c-.39.393-.645 1.108-.782 1.59c-.03.107-.218.107-.249.002c-.14-.482-.4-1.195-.793-1.586c-.393-.39-1.107-.645-1.59-.782c-.106-.03-.107-.218-.001-.249c.482-.14 1.194-.4 1.585-.793c.39-.393.646-1.107.783-1.59Z"/><path fill-rule="evenodd" d="M19 3.25a.75.75 0 0 1 .75.75v.25H20a.75.75 0 0 1 0 1.5h-.25V6a.75.75 0 0 1-1.5 0v-.25H18a.75.75 0 0 1 0-1.5h.25V4a.75.75 0 0 1 .75-.75Z" clip-rule="evenodd"/></g>
+                                </svg>
+                            </div>
+                            <div class="star-wrapper star4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" viewBox="0 0 24 24"><g fill="#EAB308">
+                                    <path d="M10.08 7.897C11.157 5.966 11.695 5 12.5 5c.805 0 1.343.966 2.42 2.897l.278.5c.306.549.46.823.698 1.004c.238.181.535.248 1.13.383l.54.122c2.091.473 3.137.71 3.385 1.51c.249.8-.464 1.633-1.89 3.3l-.368.43c-.405.474-.607.711-.699 1.004c-.09.293-.06.609.001 1.24l.056.576c.216 2.224.323 3.336-.328 3.83c-.651.495-1.63.044-3.587-.857l-.507-.234c-.556-.256-.834-.384-1.129-.384c-.295 0-.573.128-1.13.384l-.506.234c-1.957.9-2.936 1.352-3.587.857c-.651-.494-.543-1.606-.328-3.83l.056-.575c.061-.632.092-.948 0-1.24c-.09-.294-.293-.53-.698-1.004l-.369-.432c-1.425-1.666-2.138-2.5-1.89-3.3c.25-.8 1.295-1.036 3.386-1.509l.54-.122c.595-.135.892-.202 1.13-.383c.239-.18.392-.455.698-1.004l.278-.5ZM4.868 2.5c.03-.105.217-.106.248 0c.14.482.4 1.194.793 1.585c.393.39 1.108.646 1.59.783c.107.03.107.217.002.248c-.482.14-1.195.4-1.586.793c-.39.393-.645 1.108-.782 1.59c-.03.107-.218.107-.249.002c-.14-.482-.4-1.195-.793-1.586c-.393-.39-1.107-.645-1.59-.782c-.106-.03-.107-.218-.001-.249c.482-.14 1.194-.4 1.585-.793c.39-.393.646-1.107.783-1.59Z"/><path fill-rule="evenodd" d="M19 3.25a.75.75 0 0 1 .75.75v.25H20a.75.75 0 0 1 0 1.5h-.25V6a.75.75 0 0 1-1.5 0v-.25H18a.75.75 0 0 1 0-1.5h.25V4a.75.75 0 0 1 .75-.75Z" clip-rule="evenodd"/></g>
+                                </svg>
+                            </div>
+                            <div class="star-wrapper star5">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" viewBox="0 0 24 24"><g fill="#EAB308">
+                                    <path d="M10.08 7.897C11.157 5.966 11.695 5 12.5 5c.805 0 1.343.966 2.42 2.897l.278.5c.306.549.46.823.698 1.004c.238.181.535.248 1.13.383l.54.122c2.091.473 3.137.71 3.385 1.51c.249.8-.464 1.633-1.89 3.3l-.368.43c-.405.474-.607.711-.699 1.004c-.09.293-.06.609.001 1.24l.056.576c.216 2.224.323 3.336-.328 3.83c-.651.495-1.63.044-3.587-.857l-.507-.234c-.556-.256-.834-.384-1.129-.384c-.295 0-.573.128-1.13.384l-.506.234c-1.957.9-2.936 1.352-3.587.857c-.651-.494-.543-1.606-.328-3.83l.056-.575c.061-.632.092-.948 0-1.24c-.09-.294-.293-.53-.698-1.004l-.369-.432c-1.425-1.666-2.138-2.5-1.89-3.3c.25-.8 1.295-1.036 3.386-1.509l.54-.122c.595-.135.892-.202 1.13-.383c.239-.18.392-.455.698-1.004l.278-.5ZM4.868 2.5c.03-.105.217-.106.248 0c.14.482.4 1.194.793 1.585c.393.39 1.108.646 1.59.783c.107.03.107.217.002.248c-.482.14-1.195.4-1.586.793c-.39.393-.645 1.108-.782 1.59c-.03.107-.218.107-.249.002c-.14-.482-.4-1.195-.793-1.586c-.393-.39-1.107-.645-1.59-.782c-.106-.03-.107-.218-.001-.249c.482-.14 1.194-.4 1.585-.793c.39-.393.646-1.107.783-1.59Z"/><path fill-rule="evenodd" d="M19 3.25a.75.75 0 0 1 .75.75v.25H20a.75.75 0 0 1 0 1.5h-.25V6a.75.75 0 0 1-1.5 0v-.25H18a.75.75 0 0 1 0-1.5h.25V4a.75.75 0 0 1 .75-.75Z" clip-rule="evenodd"/></g>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="separator"></div>
+                        <div class="comment">
+                            <p>Diseños Hermosos</p>
+                        </div>
+                        <div class="separator"></div>
+                        <div class="comment">
+                            <p>Seguimiento RSVP muy sencillo</p>
+                        </div>
                     </div>
-                    <div class="comment">
-                        <p>Diseños Hermosos</p>
+                    <div class="main-comment">
+                        <div class="user-wrapper">
+                            <div class="img-wrapper">
+                                <img src="./assets/img/example-user-img.jpeg" alt="user face">
+                            </div>
+                            <div class="text-wrapper">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, accusamus? Magni assumenda quo natus fuga.</p>
+                                <p>Evelyn Michel</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="comment">
-                        <p>Seguimiento RSVP muy sencillo</p>
-                    </div>
-                </div>
-                <div class="main-comment">
-                    <div class="user-wrapper">
-                        <img src="" alt="user face">
-                        <p>Evelyn Michel</p>
-                    </div>
-                </div>
-            </article>
-            <div class="img-wrapper">
-                <img src="" alt="image of a letter">
+                </article>
             </div>
         </section>
+        <div class="img-wrapper">
+            <img class="letter-image" src="./assets/img/letter-white-background.webp" alt="image of a letter">
+        </div>
         <section class="why-us">
             <article>
-                <h3>Ahorra tiempo y dinero</h3>
-                <p class="artile-text">Con Wedding Link, puedes crear asombrosas invitaciones digitales en minutos, 
-                    eliminando la necesidad de impresiones costosas y el tiempo que te llevaría entregarlas
-                </p>
-                <img src="" alt="two hands">
+                <div class="text-wrapper">    
+                    <h3 class="title">Ahorra tiempo y dinero</h3>
+                    <p class="article-text">Con Wedding Link, puedes crear asombrosas invitaciones digitales en minutos, 
+                        eliminando la necesidad de impresiones costosas y el tiempo que te llevaría entregarlas
+                    </p>
+                </div>
+                <div class="img-wrapper-article-right">
+                    <img class="right" src="./assets/img/two-hands.webp" alt="two hands">
+                </div>
             </article>
             <article>
-                <h3>Lleva un registro de tus confirmaciones facilmente</h3>
-                <p class="artile-text">
-                    Nuestra plataforma te permite administrar facilmente las respuestas de tus invitados y llevar un registro 
-                    de sus confirmaciones en tiempo real sin necesidad de recibir cientos de mensajes a tu numero de Whatsapp, 
-                    olvidate de llevar registros o seguimientos de forma manual.
-                </p>
-                <img src="" alt="flowers background purple">
+                <div class="text-wrapper">
+                    <h3 class="title">Lleva un registro de tus confirmaciones facilmente</h3>
+                    <p class="article-text">
+                        Nuestra plataforma te permite administrar facilmente las respuestas de tus invitados y llevar un registro 
+                        de sus confirmaciones en tiempo real sin necesidad de recibir cientos de mensajes a tu numero de Whatsapp, 
+                        olvidate de llevar registros o seguimientos de forma manual.
+                    </p>    
+                </div>
+                <div class="img-wrapper-article-left">
+                    <img class="left" src="./assets/img/roses-purple-background.webp" alt="flowers background purple">
+                </div>
             </article>
             <article>
-                <h3>Mejora la experiencia de tus invitados</h3>
-                <p class="artile-text">
-                    Ofrezca a sus invitados una experiencia perfecta con nuestras invitaciones digitales interactivas. Ellos
-                    podran facilmente confirmar su asistencia y acceder a los detalles de tu evento.
-                </p>
-                <img src="" alt="flowers white background">
+                <div class="text-wrapper">    
+                    <h3 class="title">Mejora la experiencia de tus invitados</h3>
+                    <p class="article-text">
+                        Ofrezca a sus invitados una experiencia perfecta con nuestras invitaciones digitales interactivas. Ellos
+                        podran facilmente confirmar su asistencia y acceder a los detalles de tu evento.
+                    </p>
+                </div>
+                <div class="img-wrapper-article-right">
+                    <img class="right" src="./assets/img/paper-white-background.jpeg" alt="flowers white background">
+                </div>
             </article>
         </section>
-        <section class="comment">
-            <p>
-                "Las invitaciones digitales de InviteMe fueron hermosas y recibieron muchos elogios de nuestros invitados. ¡Muy recomendables!"
+        <section class="comment-section">
+            <p class="text">
+                "Las invitaciones digitales de Wedding Link fueron hermosas y recibieron muchos elogios de nuestros invitados. ¡Muy recomendables!"
             </p>
             <div class="user-wrapper">
-                <img src="" alt="user face">
+                <img src="./assets/img/example-user-img.jpeg" alt="user face">
                 <p>Abby Gutierrez</p>
             </div>
         </section>
         <section class="joinus-bottom">
             <div class="joinus-bottom-wrapper">
-                <h3>Unete a la revolución de invitaciones digitales con Wedding Link<span>.</span></h3>
+                <h3 class="title">Unete a la revolución de invitaciones digitales con Wedding Link<span>.</span></h3>
                 <p>
                     “Usar Wedding Link para nuestras invitaciones de boda hizo que todo el proceso fuera eficiente y nos permitió centrarnos en otros aspectos de la planificación de nuestra boda”. -Daniel Cantabrana.
                 </p>
-                <form action="">
-                    <input type="email" name="" id="" placeholder="Enter your email...">
+                <form class="form" action="">
+                    <input type="text" name="name" id="name" placeholder="Ingresa tu nombre..." required>
+                    <input type="email" name="email" id="email" placeholder="Ingresa tu correo..." required>
+                    <input type="tel" name="phone" id="phone" placeholder="Ingresa tu telefono..." required>
                     <button type="submit">Contactenme</button>
                 </form>
             </div>
