add min max characters on phone input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <form class="form" action="">
                     <input type="text" name="name" id="name" placeholder="Ingresa tu nombre..." required>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo..." required>
-                    <input type="tel" name="phone" id="phone" placeholder="Ingresa tu telefono..." required>
+                    <input type="tel" name="phone" id="phone" placeholder="Ingresa tu telefono..." minlength="10" maxlength="10" required>
                     <button type="submit">Contactenme</button>
                 </form>
                 <article>
@@ -137,7 +137,7 @@
                 <form class="form" action="">
                     <input type="text" name="name" id="name" placeholder="Ingresa tu nombre..." required>
                     <input type="email" name="email" id="email" placeholder="Ingresa tu correo..." required>
-                    <input type="tel" name="phone" id="phone" placeholder="Ingresa tu telefono..." required>
+                    <input type="tel" name="phone" id="phone" placeholder="Ingresa tu telefono..." minlength="10" maxlength="10" required>
                     <button type="submit">Contactenme</button>
                 </form>
             </div>
