add icon, typo, improve seo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Servicio de invitaciones digitales para bodas, quinceaños y bautizos">
+    <link rel="icon" type="image/x-icon" href="./assets/img/icono-weddinglink.ico">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Wedding Link</title>
 </head>
@@ -109,7 +111,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <p>“Me gusto muchísimo el diseño de mi invitación, me evite el estrés y trabajo de tener
-                                    que enviarle la invitación cada uno de mis invitados.”</p>
+                                    que enviarle la invitación a cada uno de mis invitados.”</p>
                                 <p>Evelyn Michel</p>
                             </div>
                         </div>
@@ -129,7 +131,7 @@
                     </p>
                 </div>
                 <div class="img-wrapper-article-right">
-                    <img class="right" src="./assets/img/two-hands.webp" alt="two hands">
+                    <img class="right" src="./assets/img/two-hands.webp" alt="two hands" loading="lazy">
                 </div>
             </article>
             <article>
@@ -144,7 +146,8 @@
                     </p>
                 </div>
                 <div class="img-wrapper-article-left">
-                    <img class="left" src="./assets/img/roses-purple-background.webp" alt="flowers background purple">
+                    <img class="left" src="./assets/img/roses-purple-background.webp" alt="flowers background purple"
+                        loading="lazy">
                 </div>
             </article>
             <article>
@@ -157,7 +160,8 @@
                     </p>
                 </div>
                 <div class="img-wrapper-article-right">
-                    <img class="right" src="./assets/img/paper-white-background.jpeg" alt="flowers white background">
+                    <img class="right" src="./assets/img/paper-white-background.webp" alt="flowers white background"
+                        loading="lazy">
                 </div>
             </article>
         </section>
@@ -167,7 +171,7 @@
                 invitados. ¡Muy recomendables!”
             </p>
             <div class="user-wrapper">
-                <img src="./assets/img/user-kala.webp" alt="user Pau">
+                <img src="./assets/img/user-kala.webp" alt="user Pau" loading="lazy">
                 <p>Pau Garate</p>
             </div>
         </section>
