add greetings dialog

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                     Simplifica la planeación de tu boda con nuestra plataforma de invitaciones digitales fácil de usar.
                 </p>
                 <p class="small-text">Los invitados pueden fácilmente confirmar su asistencia.</p>
+                <dialog id="greetingsDialog">
+                    <h3>Gracias por contactarnos</h3>
+                    <p>Muy pronto te contactaremos para resolver todas tus dudas.</p>
+                    <button id="btnCloseModal" onClick="this.parentElement.close()">Aceptar</button>
+                </dialog>
                 <form class="form hero-form" action="">
                     <input type="text" name="name" id="name-hero-form" class="input-hero-form"
                         placeholder="Ingresa tu nombre..." maxlength="30" autocomplete="off" required>
